...
    const val DOCUMENT_SELECTED_STATUS = "documentSelectedStatus"
    const val DOCUMENT_DESTINATION_ACTION = "documentDestinationAction"
    const val DOCUMENT_CAN_FIELD = "documentCanField"
    const val PIN2_FIELD = "pin2Field"
    const val DOCUMENT_SIGN_ACTION = "documentSignAction"
    const val DOCUMENT_SIGNING_STATUS = "documentSigningStatus"
    const val TIMESTAMP_SETTINGS_ACTION = "timestampSettingsAction"
    const val TIMESTAMP_SETTINGS_CARD = "timestampSettingsCard"
    const val TIMESTAMP_ADD_ACTION = "timestampAddAction"
    const val TIMESTAMP_SAVE_ACTION = "timestampSaveAction"
    const val TIMESTAMP_RESTORE_ACTION = "timestampRestoreAction"
    const val TIMESTAMP_CLOSE_ACTION = "timestampCloseAction"
    const val TIMESTAMP_SETTINGS_STATUS = "timestampSettingsStatus"
    const val BROWSER_ACTION = "browserAction"
    const val BROWSER_VIEW = "browserView"
    const val BROWSER_URL_FIELD = "browserUrlField"
    const val BROWSER_GO_ACTION = "browserGoAction"
    const val BROWSER_BACK_ACTION = "browserBackAction"
    const val BROWSER_FORWARD_ACTION = "browserForwardAction"
...
