<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2026 Petri Koistinen. Licensed under the Apache License, Version 2.0. -->
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="restore">Restore</string>
</resources>
